--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -2,6 +2,13 @@ header, nav, main {
     max-width: 960px;
     margin: auto;
 }
+.reviewWrapper {
+    h2, #cards {
+        max-width: 960px;
+        margin: auto;
+
+    }
+}
 
 /* NAVIGATION STUFF GOES HERE  */
 
